<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_main_screen">Monsignor Doyle</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_map">School Map</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_connect">Connect</string>
    <string name="hello_world">Hello world!</string>
    <string name="DEBUG_TAG">MonDoyleApp</string>
    <string name="title_activity_edit_class">Edit Class</string>
    <string name="title_activity_support">Support</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_calendar">Calendar</string>

    <string name="school_mondoyle">Monsignor Doyle</string>
    <string name="school_stbenedict">St. Benedict\'s</string>
    <string name="school_stdavid">St. David\'s</string>
    <string name="school_resurrection">Resurrection</string>
    <string name="school_stmary">St. Mary\'s</string>

    <string name="welcome_message"></string>

</resources>
